--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>LennoxAngular</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="1024">
   <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
