--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LennoxAngular</title>
+  <title>Lennox</title>
   <base href="/">
 
   <meta name="viewport" content="1024">
